--- a/public/offline.html
+++ b/public/offline.html
@@ -12,7 +12,7 @@
             body {
                 height: 100%;
                 margin: 0;
-                background: #000008;
+                background: #000;
                 display: flex;
                 align-items: center;
                 text-align: center;
@@ -27,7 +27,7 @@
                 flex-direction: column;
                 padding: 40px 8%;
                 border-radius: 20px;
-                background: #00fffd;
+                background: hsl(382 100% 50% / 1);
             }
 
             .offline {
