--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" type="image/png" href="./img/logo.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Modern PWA Website application" />
-        <meta name="theme-color" content="var(--theme)" />
+        <meta name="theme-color" content="var(--theme, hsl(0deg 0% 11%))" />
         <link rel="apple-touch-icon" href="./img/logo.png" />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="manifest" href="./manifest.json" />
