--- a/public/offline.html
+++ b/public/offline.html
@@ -27,7 +27,7 @@
                 flex-direction: column;
                 padding: 40px 8%;
                 border-radius: 20px;
-                color: hsl(358deg 81% 49%);
+                color: hsl(357 81% 49%);
             }
 
             .offline {
@@ -52,7 +52,11 @@
     <body>
         <div class="offline_outer">
             <h2 class="offline">
-                No Internat <span style="--i: 0">.</span><span style="--i: 1">.</span><span style="--i: 2">.</span><span style="--i: 3">.</span>
+                No Internat 
+                <span style="--i: 0">.</span>
+                <span style="--i: 1">.</span>
+                <span style="--i: 2">.</span>
+                <span style="--i: 3">.</span>
             </h2>
         </div>
     </body>
