--- a/public/offline.html
+++ b/public/offline.html
@@ -52,7 +52,7 @@
     <body>
         <div class="offline_outer">
             <h2 class="offline">
-                No Internat 
+                No Internet 
                 <span style="--i: 0">.</span>
                 <span style="--i: 1">.</span>
                 <span style="--i: 2">.</span>
